--- a/Calculator.html
+++ b/Calculator.html
@@ -1,5 +1,9 @@
 <html>
+    <body>
     <script>
+    JavaScript Calculator
     z=prompt("Enter a value");
+    alert(z);
     </script> 
+    </body>
 </html>
