--- a/Calculator.html
+++ b/Calculator.html
@@ -1,9 +1,17 @@
 <html>
-    <body>
+<body>
+
+<h2>JavaScript Calculator</h2>
+
     <script>
-    JavaScript Calculator
-    z=prompt("Enter a value");
-    alert(z);
-    </script> 
-    </body>
-</html>
+        num1 = prompt("Enter a Value");
+        sign = prompt("Enter a sign");
+        num2 = prompt("Enter a Value");
+        if(sign == "+") alert(result = eval(num1) + eval(num2));
+        if(sign == "-") alert(result = eval(num1) - eval(num2));
+        if(sign == "*") alert(result = eval(num1) * eval(num2));
+        if(sign == "/") alert(result = eval(num1) / eval(num2));
+    </script>
+
+</body>
+</html> 
