--- a/Calculator.html
+++ b/Calculator.html
@@ -1,8 +1,8 @@
 <html>
 <body>
 
-    <h1><font size="10"><center>JavaScript Calculator</center></font></h1>
-    <p><center>Click the button to calculate the values</center></p>
+    <h1 style="color:Tomato;"><font size="10"><center>JavaScript Calculator</center></font></h1>
+    <h4 style="color:DodgerBlue;"><center>Click the button to calculate the values</center></h4>
     <center>
     <button onclick="calculator()">Try it</button>
     </center>
