--- a/Calculator.html
+++ b/Calculator.html
@@ -12,10 +12,11 @@
         num1 = prompt("Enter a Value");
         sign = prompt("Enter a sign");
         num2 = prompt("Enter a Value");
-        if(sign == "+") alert(result = eval(num1) + eval(num2));
-        if(sign == "-") alert(result = eval(num1) - eval(num2));
-        if(sign == "*") alert(result = eval(num1) * eval(num2));
-        if(sign == "/") alert(result = eval(num1) / eval(num2));
+        if(sign == "+") result = eval(num1) + eval(num2);
+        if(sign == "-") result = eval(num1) - eval(num2);
+        if(sign == "*") result = eval(num1) * eval(num2);
+        if(sign == "/") result = eval(num1) / eval(num2);
+        alert("Answer : " + result);
         }
     </script>
 
