--- a/Calculator.html
+++ b/Calculator.html
@@ -4,7 +4,7 @@
     <h1 style="color:Tomato;"><font size="10"><center>JavaScript Calculator</center></font></h1>
     <h4 style="color:DodgerBlue;"><center>Click the button to calculate the values</center></h4>
     <center>
-    <button onclick="calculator()">Try it</button>
+    <button onclick="calculator()">Start calculation</button>
     </center>
 
     <script>
