--- a/Calculator.html
+++ b/Calculator.html
@@ -16,7 +16,7 @@
         if(sign == "-") result = eval(num1) - eval(num2);
         if(sign == "*") result = eval(num1) * eval(num2);
         if(sign == "/") result = eval(num1) / eval(num2);
-        alert("Answer : " + result);
+        alert("The result is : " + result);
         }
     </script>
 
