--- a/Exercise2.html
+++ b/Exercise2.html
@@ -2,7 +2,9 @@
 <body>
 
     <h1 style="color:Tomato;"><font size="10"><center>A Fancy JavaScript Calculator</center></font></h1>
+
     <center>
+<h4 style="color:DodgerBlue;"><center>Choose the sign to calculate the values</center></h4>
 
     <script>
         function calc(){
